--- a/index.html
+++ b/index.html
@@ -1,95 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>fakestoreapi</title>
+    <link rel="icon" type="image/png" href="store.jpg" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <!-- Tailwind CSS -->
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- google Montserrat  font  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-</head>
+    <!-- Updated compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
 
-<body>
-  <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
-          <h1></h1>
+    <!-- google Montserrat  font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <header>
+      <section class="container my-2">
+        <!-- Search Input Box -->
+        <div class="d-flex">
+          <input
+            type="text"
+            class="form-control me-2"
+            placeholder="Search your product here"
+            id="searchInput"
+          />
+          <button class="btn btn-dark" id="search-btn">Search</button>
         </div>
-      </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart" id="my-cart">
-          <table class="table">
-            <thead>
-              <h1>My-Cart</h1>
-              <tr>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>Total Added-Products:</th>
-                <td>$ <span id="total-Products">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Price:</th>
-                <td>$ <span id="price">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Delivery-Charge:</th>
-                <td>$ <span id="delivery-charge">20</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Total-Tax:</th>
-                <td>$ <span id="total-tax">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">Total</th>
-                <td colspan="2">$ <span id="total">0</span></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+      </section>
+    </header>
+    <main>
+      <!-- Product Area -->
+      <section class="product-with-carts">
+        <div class="row">
+          <div class="col-md-8 ">
+            <div id="products-container" class="row "></div>
+          </div>
+          <!-- Cart Details -->
+          <div class="col-md-3">
+            <div class="cart mt-20" id="my-cart">
+              <table class="table">
+                <thead>
+                  <h1>My-Cart</h1>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>Total Added-Products:</th>
+                    <td><span id="total-Products">0</span></td>
+                  </tr>
+                  <tr>
+                    <th>Price:</th>
+                    <td>$ <span id="price">0</span></td>
+                  </tr>
+                  <tr>
+                    <th>Delivery-Charge:</th>
+                    <td>$ <span id="delivery-charge">20</span></td>
+                  </tr>
+                  <tr>
+                    <th>Total-Tax:</th>
+                    <td>$ <span id="total-tax">0</span></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Total</th>
+                    <td colspan="2">$ <span id="total">0</span></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="parces text-center">
+                <button
+                  class="
+                  bg-purple-600
+                    text-white 
+                    text-lg
+                    font-bold
+                    w-40
+                    h-16
+                    rounded
+                    mr-1
+                    mb-1
+                  "
+                >
+                  Buy Now
+                </button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </main>
-  <footer></footer>
-
-  <!-- add javascript  file  -->
-  <script src="./js/app.js"></script>
-</body>
-
+      </section>
+    </main>
+    <footer></footer>
+    <!-- JavaScript  file  -->
+    <script src="js/app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
